--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
 
@@ -74,6 +74,11 @@
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
+
+           <plugin>
+         <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.0</version>
+      </plugin>
 
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
