--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
           <version>2.4</version>
         </plugin>
 
+       <plugin>
+         <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.0</version>
+      </plugin
+
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
