--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
         <version>3.3.0</version>
-      </plugin
+      </plugin>
 
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
