--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,12 @@
     <version>1.2</version>
 </dependency>
 
+<dependency>
+       <groupId>javax.servlet</groupId>
+       <artifactId>jstl</artifactId>
+       <version>1.2</version>
+      </dependency>
+
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
