--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,32 @@
         <scope>test</scope>
       </dependency>
 
+  <dependency>
+       <groupId>jakarta.servlet.jsp.jstl</groupId>
+       <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+       <version>2.0.0</version>
+     </dependency>
+     <dependency>
+       <groupId>org.glassfish.web</groupId>
+       <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+       <version>2.0.0</version>
+     </dependency>
+
+       <!-- https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api -->
+     <dependency>
+       <groupId>jakarta.websocket</groupId>
+       <artifactId>jakarta.websocket-api</artifactId>
+       <version>2.1.1</version>
+       <scope>provided</scope>
+     </dependency>
+	   <!-- https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-client-api -->
+     <dependency>
+       <groupId>jakarta.websocket</groupId>
+       <artifactId>jakarta.websocket-client-api</artifactId>
+       <version>2.1.1</version>
+       <scope>provided</scope>
+     </dependency>
+
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-core</artifactId>
