--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <!-- Config here. -->
 
 </web-app>
-  <display-name>28cc9c71-a9de-4ac7-8c3d-de369909854f.txt</display-name>
+  <display-name>webapp</display-name>
   <!--
   <servlet>
   <servlet-name>HelloWorldExample</servlet-name>
