--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,8 +12,8 @@
 
   <artifactId>webapp</artifactId>
   <packaging>war</packaging>
-  <name>webapp</name>
-  <description>webapp.</description>
+  <name>Webapp</name>
+  <description>Webapp.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
@@ -42,3 +42,5 @@
   </dependencies>
 
 </project>
+    
+    
