--- a/configuration.json
+++ b/configuration.json
@@ -1,13 +1,62 @@
 {
-  "url": "https://13.200.251.142:8443/Webapp/",
-  "checks": ["xss*", "-csrf"],
-  "scope": {
-    "include_subdomains": true,
-    "exclude_content_patterns": ["logout", "signout"]
-   },
-  "audit": {
-    "forms": true,
-    "cookies": true,
-    "headers": true
-  },
+    "checks": [
+        "*",
+        "xss",
+        "-csrf"
+    ],
+    "scope": {
+        "include_subdomains": true,
+        "exclude_patterns": [
+            "logout",
+            "signout"
+        ],
+        "redundant_path_patterns": [
+            "index.php"
+        ],
+        "dom_depth_limit": 5,
+        "exclude_path_patterns": [
+            "/admin",
+            "/private"
+        ],
+        "include_path_patterns": [
+            "/public",
+            "/user"
+        ],
+        "restrict_paths": [
+            "/restricted"
+        ],
+        "extend_paths": [
+            "/extra"
+        ],
+        "url_rewrites": {
+            "pattern": "replacement"
+        },
+        "old-path": "new-path"
+    },
+    "audit": {
+        "links": true,
+        "forms": true,
+        "cookies": true,
+        "headers": true,
+        "jsons": true,
+        "xmls": true,
+        "ui_inputs": true,
+        "ui_forms": true,
+        "parameter_names": true,
+        "with_extra_parameter": true,
+        "with_both_methods": true,
+        "exclude_vector": [
+            "logout"
+        ],
+        "include_vector": [
+            "login"
+        ]
+    },
+    "report": {
+        "save_path": "/var/lib/jenkins/HELLOWORLD",
+        "formats": [
+            "html",
+            "json"
+        ]
+    }
 }
