--- a/configuration.json
+++ b/configuration.json
@@ -1,7 +1,7 @@
 {
-    "url": "http://65.2.152.116:9292/",
+    "url": "http://65.2.152.116:9292",
     "authentication": {
-    "username": "yaswanth61998@gmai.com",
+    "username": "yaswanth61998@gmail.com",
     "password": "admin123456"
   },
     "checks": [
