--- a/configuration.json
+++ b/configuration.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://52.66.132.132:8443/Webapp/",
+    "url": "http://52.66.132.132/Webapp/",
     "checks": [
         "*",
         "xss",
