--- a/configuration.json
+++ b/configuration.json
@@ -1,6 +1,12 @@
 {
     "url": "http://52.66.132.132/Webapp/",
-    "checks": [
+    "http": {
+    "authentication": {
+      "username": "tomcat",
+      "password": "tomcat"
+    }
+  },
+  "checks": [
         "*",
         "xss",
         "-csrf"
