--- a/configuration.json
+++ b/configuration.json
@@ -1,13 +1,13 @@
 {
-"url": "http://13.127.237.202/Webapp/",
+"url": "http://3.111.149.119:9292/",
   "http": {
     "user_agent": "Arachni",
     "request_timeout": 5000,
     "request_redirect_limit": 5,
     "request_queue_size": 10,
     "authentication": {
-      "username": "tomcat",
-      "password": "tomcat"
+      "username": "ravuriyaswanth6@gmail.com",
+      "password": "admin123456"
     }
   },
   "checks": [
