--- a/myConfiguration.json
+++ b/myConfiguration.json
@@ -7,7 +7,7 @@
     ],
     "scope": {
        "include_subdomains": true,
-       "page_limit" : 3
+       "page_limit" : 3,
        "redundant_path_patterns": [
          "index.php"
        ],
